[package]
name = "resynth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resynth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ['init-if-needed']}
anchor-spl = "0.26.0"
pyth-sdk-solana = "0.7.0"
solana-program = "1.14.13"
